--- a/buihuunhan_dc21v7n530_frontend/package.json
+++ b/buihuunhan_dc21v7n530_frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "buihuunhan-dc21v7n530-frontend",
+  "name": "buihuunhan_dc21v7n530_frontend",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -12,15 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^7.0.1",
-    "axios": "^1.12.2",
-    "bootstrap": "^4.6.2",
-    "jquery": "^3.7.1",
-    "popper.js": "^1.16.1",
-    "vee-validate": "^4.15.1",
-    "vue": "^3.5.18",
-    "vue-router": "^4.5.1",
-    "yup": "^1.7.1"
+    "vue": "^3.5.18"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
